--- a/index.html
+++ b/index.html
@@ -4,8 +4,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <title>User registration Form</title>
   <style type="text/css">
-    html { margin: 0; height: 100%; overflow: hidden; }
-    iframe { position: absolute; top: 0; right: 0; bottom: 0; left: 0; border: 0; }
+    html {
+      margin: 0;
+      height: 100%;
+      overflow: hidden;
+      background-color: #B3CCF4;
+    }
+
+    body {
+      margin: 0;
+      height: 100%;
+      background-color: #B3CCF4;
+    }
+
+    iframe {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      border: 0;
+    }
   </style>
 </head>
 <body>
